--- a/lib/l10n/app_km.arb
+++ b/lib/l10n/app_km.arb
@@ -1,81 +1,81 @@
 {
     "buddhistSun": "Buddhist Sun",
-    "noon": "Noon",
-    "dawn": "Dawn",
-    "timer": "Timer",
-    "gps": "GPS",
-    "settings": "Settings",
-    "help": "Help",
-    "about": "About",
-    "licenses": "Licenses",
-    "not_set": "Not Set",
-    "solar_noon": "Solar Noon",
-    "gmt_offset": "GMT Offset",
-    "hours": "hours",
-    "astronomical_twilight": "Astronomical Twilight",
-    "nautical_twilight": "Nautical Twilight",
-    "civil_twilight": "Civil Twilight",
-    "sunrise": "Sunrise",
-    "date": "Date",
-    "current_time": "Current Time",
-    "late": "Late",
-    "time_left": "Time Left",
-    "speech_notify": "Speech Notify",
-    "screen_always_on": "Screen Always On",
-    "speech_in_background": "Speech in background",
-    "volume": "Volume",
-    "press_wait": "Press and wait for new GPS.",
-    "get_gps": "Get GPS",
-    "save_gps": "Save GPS",
-    "set_gps_city": "Set GPS city name by Internet",
-    "previous_gps_is": "Previous GPS is",
-    "decimal_number": "Decimal Number",
-    "current_offset_is": "Current offset is",
-    "safety": "Safety",
-    "none": "none",
-    "minute1": "1 minute",
-    "minutes2": "2 minutes",
-    "minutes3": "3 minutes",
-    "minutes4": "4 minutes",
-    "minutes5": "5 minutes",
-    "minutes10": "10 minutes",
-    "pa_auk": "Pa-Auk",
-    "na_uyana": "Na-Uyana",
-    "search_for_city": "Search for city",
-    "gps_permission": "GPS Permission",
-    "background_permission": "Background Permission",
-    "error": "Error",
-    "notification": "Notification",
+    "noon": "ថ្ងៃត្រង់",
+    "dawn": "ពេលអរុណរះ",
+    "timer": "ពេលវេលា",
+    "gps": "ប្រព័ន្ធកំណត់ទីតាំងសកល",
+    "settings": "ការកំណត់",
+    "help": "ជំនួយ",
+    "about": "អំពី",
+    "licenses": "អាជ្ញាប័ណ្ណ",
+    "not_set": "មិនបានកំណត់",
+    "solar_noon": "ព្រះអាទិត្យរះត្រង់",
+    "gmt_offset": "GMT អុហ្វសិត",
+    "hours": "ម៉ោង",
+    "astronomical_twilight": "ថ្ងៃលិចនៃ Astronomical",
+    "nautical_twilight": "ថ្ងៃលិចនៃ Nautical",
+    "civil_twilight": "ថ្ងៃលិចនៃ Civil",
+    "sunrise": "ព្រះអាទិត្យរះ",
+    "date": "កាលបរិច្ឆេទ",
+    "current_time": "ពេលវេលាបច្ចុប្បន្ន",
+    "late": "យឺត",
+    "time_left": "ពេលវេលាដែលនៅសល់",
+    "speech_notify": "ជូនដំណឹងជាសុន្ទរកថា",
+    "screen_always_on": "តែងតែបើកអេក្រង់",
+    "speech_in_background": "ជូនដំណឹងនៅផ្ទៃខាងក្រោយ",
+    "volume": "កំរិតសំលេង",
+    "press_wait": "ចុច​នឹងរង់ចាំសម្រាប់កំណត់ទីតាំងថ្មី",
+    "get_gps": "ទទួលការកំណត់ទីតាំងថ្មី",
+    "save_gps": "រក្សាទុកការកំណត់ទីតាំងថ្មី",
+    "set_gps_city": "កំណត់ទីតាំង ឈ្មោះទីក្រុង ដោយអ៊ីនធើណិត",
+    "previous_gps_is": "ទីតាំងពីមុនគឺ",
+    "decimal_number": "ចំនួនលេខទសភាគ",
+    "current_offset_is": "អុហ្វសិតបច្ចុប្បន្នគឺ",
+    "safety": "សុវត្ថិភាព",
+    "none": "គ្មាន",
+    "minute1": "១​ នាទី",
+    "minutes2": "២ នាទី",
+    "minutes3": "៣ នាទី",
+    "minutes4": "៤ នាទី",
+    "minutes5": "៥ នាទី",
+    "minutes10": "១០ នាទី",
+    "pa_auk": "Pa_Auk",
+    "na_uyana": "Na_uyana",
+    "search_for_city": "ស្វែងរកឈ្មោះទីក្រុង",
+    "gps_permission": "ការអនុញ្ញាតពីការកំណត់ទីតាំងសកល",
+    "background_permission": "ការអនុញ្ញាតពីផ្ទៃខាងក្រោយ",
+    "error": "មានកំហុស",
+    "notification": "សារជូនដំណឹង",
     "running_in_background": "Buddhist Sun Running In Background",
-    "background_initialized": "Background Initialized",
-    "background_enabled": "Background Enabled",
-    "background_not_set": "Background not set",
-    "background_init_error": "Background initialize error",
-    "background_disabled": "Background disabled",
-    "ok": "OK",
-    "yes": "Yes",
-    "no": "No",
-    "cancel": "Cancel",
-    "gps_not_available": "GPS is not available",
-    "gps_recommend": "GPS is recommended for best results.  Would you like to set GPS?",
-    "gps_internet_message": "If the Internet is turned on, the City Name can be referenced by GPS",
-    "language": "Locale",
-    "theme": "Theme",
+    "background_initialized": "រៀបចំផ្ទៃខាងក្រោយ",
+    "background_enabled": "បានអនុញ្ញាតិផ្ទៃខាងក្រោយ",
+    "background_not_set": "មិនបានកំណត់ផ្ទៃខាងក្រោយ",
+    "background_init_error": "ការរៀបចំផ្ទៃខាងក្រោយមានបញ្ហា",
+    "background_disabled": "មិនបានអនុញ្ញាតិផ្ទៃខាងក្រោយ",
+    "ok": "យល់ព្រម",
+    "yes": "បាទ,ចាស",
+    "no": "ទេ",
+    "cancel": "បោះបង់",
+    "gps_not_available": "ការកំណត់ទីតាំងសកល មិនមាន",
+    "gps_recommend": "ការកំណត់ទីតាំង ត្រូវបានណែនាំសម្រាប់លទ្ធផលល្អ.  តើអ្នកចង់កំណត់ទីតាំងសកលដែរឬទេ?",
+    "gps_internet_message": "ប្រសិនបើអ៊ីនធើណិតត្រូវបានបើក, ឈ្មោះទីក្រុងអាចយោងដោយការកំណត់ទីតាំងសកល",
+    "language": "ភាសា",
+    "theme": "គំរូរចនា",
     "help_content": "Calculations:\n The calculations are based on equations from Astronomical Algorithms, by Jean Meeus. The sunrise and sunset results are theoretically accurate to within a minute for locations between +/- 72° of latitud. Please consider stopping well before the stated time. \n\nNOON:\nThe Noon screen displays the Solar Noon for the current day as selected by GPS or City in an easy to view manner. All times reflect the safety from settings.  (see below) \n\nDAWN:\nThe Dawn screen displays the selected Dawn formula from the settings and also various solar calculations. All times reflect the safety from settings.  \nPa-Auk = ( Sunrise - 40 Minutes).  \nNa-uyana = ( Sunrise - 30 minutes)  (see below) \n\nGPS:\nGPS will automatically set the city if the Internet is on and the checkbox is checked.  It is recommended that you use the GPS settings for your location because the Solar Noon will be most accurate this way.  This was not tested with \"Day Light Savings\" locations.\n\nSETTINGS:\nOffset:\n This is automatically set when using GPS.  If you use City Search in settings, you must select an offset (GMT +- your local time). \nSaftey:\nThis subtracts minutes from the Noon time to make it earlier and adds to Dawnrise to make it later.  The formula is accurate within one minute so the default safety is 1 minute. \nDawn:\nChoose your prefered Dawnrise.  Na-Uyana uses Sunrise -30 minutes, and Pa-Auk uses Sunrise -40 minutes.  Safety will add x-Minutes to this time. \nTimer:\nThe Timer screen allows for hands free audio notifications.  Speech means \"Text to Speech\".  The volume is controlled by the slider.  Under normal conditions the speech notifications only work while the screen is on.  To fix this, you can make the screen stay awake with the \"Screen Always On\" switch, or you can enable the \"TTS with screen off\" feature.  This will enable \"background\" operation while your screen is off and prevent the device from entering sleep mode. You should test this background feature a few times before relying on it.  Some phones may not allow it. We are not responsible for anything.  When you close the applicaton, a method is called to stop the background task.  You will know the app is running in the background by the sun icon displayed in the top of your phone's notification area (where the time and signal bars are).  If Buddhist Sun is not in \"background mode\", you will not see a sun icon. This feature is not available for iOS users.\n The speech announcements are in the following minute intervals: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacy:\nA full privacy statement is located at:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n We do not collect information.",
     "about_content": "Buddhist Sun is a small app for Buddhist monks and nuns to display the Solar Noon time specific to Buddhist monastic needs. Because I usually eat with my hands, I needed to have a \"hands free\" way to know when the Noon was approaching. The timer with voice notifications turned on helps me know the time left for eating.  I enjoy using the app, and I hope that you do too.\n\nWhy is this important?\nThose who follow Buddhist monastic rules are not allowed to eat after Noon.  The rule is according to the sun at its zenith in the sky rather than a clock. They did not have clocks in the Buddha's time.  Others who follow 8 or 10 precepts may find this app useful too.\n\nI recommend https://TimeandDate.com to verify this app's accuracy.This application is meant for \"present moment/location\" use.  \n\nMay this help you to reach Nibbāna quickly and safely!",
     "gps_permission_content": "Permission will be requested for GPS use. This allows for Buddhist Sun to know the GPS Location Data to calculate the sun's position. GPS is only collected once for each time the GPS button is pressed.  Data is not sent outside this app.",
     "background_permission_content": "Permission will be requested for background use.  This permission is needed to enable speech notifications to run properly the screen on.  Buddhist Sun will turn off this Background process when the switch is turned off or the app is closed.  Permission will be requested only one time if accepted.",
     "dstSavingsNotice": "Warning, this app does not calculate for Daylight Savings Time (DST).  Please be aware of the changes.  When DST happens you need to reset the GPS or the offset found in the Settings Tab.",
-    "dstNoticeTitle": "Daylight Savings Notice",
-    "verify": "Verify Noon",
-    "rateThisApp": "Rate This App",
-    "prev": "Prev",
-    "next": "Next",
-    "moonPhase": "Moon Phase:",
-    "selectDate": "Select Date",
-    "selectedDate": "Selected Date:",
-    "moon": "moon",
-    "darkMode": "Dark Mode",
-    "color": "Color",
+    "dstNoticeTitle": "សេចក្តីជូនដំណឹងអំពីដំណើរនៃពន្លឺថ្ងៃ",
+    "verify": "ផ្ទៀងផ្ទាត់ថ្ងៃត្រង់",
+    "rateThisApp": "វាយតំលៃកម្មវិធីនេះ",
+    "prev": "មុន",
+    "next": "បន្ទាប់",
+    "moonPhase": "ដំណាកកាលព្រះច័ន្ទ",
+    "selectDate": "ជ្រើសរើសកាលបរិច្ឆេទ",
+    "selectedDate": "បានជ្រើសរើសកាលបរិច្ឆេទ",
+    "moon": "ព្រះច័ន្ទ",
+    "darkMode": "ទំរង់ងងឹត",
+    "color": "ពណ៌",
     "material3": "Material 3"
 }
