--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -1,81 +1,81 @@
 {
-  "buddhistSun": "Buddhist Sun",
-  "noon": "Noon",
-  "dawn": "Dawn",
-  "timer": "Timer",
+  "buddhistSun": "พุทธซัน",
+  "noon": "เที่ยง กลางวัน",
+  "dawn": "อรุณ",
+  "timer": "ตัวจับเวลา",
   "gps": "GPS",
-  "settings": "Settings",
-  "help": "Help",
-  "about": "About",
-  "licenses": "Licenses",
-  "not_set": "Not Set",
-  "solar_noon": "Solar Noon",
-  "gmt_offset": "GMT Offset",
-  "hours": "hours",
-  "astronomical_twilight": "Astronomical Twilight",
-  "nautical_twilight": "Nautical Twilight",
-  "civil_twilight": "Civil Twilight",
-  "sunrise": "Sunrise",
-  "date": "Date",
-  "current_time": "Current Time",
-  "late": "Late",
-  "time_left": "Time Left",
-  "speech_notify": "Speech Notify",
-  "screen_always_on": "Screen Always On",
-  "speech_in_background": "Speech in background",
-  "volume": "Volume",
-  "press_wait": "Press and wait for new GPS.",
-  "get_gps": "Get GPS",
-  "save_gps": "Save GPS",
-  "set_gps_city": "Set GPS city name by Internet",
-  "previous_gps_is": "Previous GPS is",
-  "decimal_number": "Decimal Number",
-  "current_offset_is": "Current offset is",
-  "safety": "Safety",
-  "none": "none",
-  "minute1": "1 minute",
-  "minutes2": "2 minutes",
-  "minutes3": "3 minutes",
-  "minutes4": "4 minutes",
-  "minutes5": "5 minutes",
-  "minutes10": "10 minutes",
-  "pa_auk": "Pa-Auk",
-  "na_uyana": "Na-Uyana",
-  "search_for_city": "Search for city",
-  "gps_permission": "GPS Permission",
-  "background_permission": "Background Permission",
-  "error": "Error",
-  "notification": "Notification",
-  "running_in_background": "Buddhist Sun Running In Background",
-  "background_initialized": "Background Initialized",
-  "background_enabled": "Background Enabled",
-  "background_not_set": "Background not set",
-  "background_init_error": "Background initialize error",
-  "background_disabled": "Background disabled",
-  "ok": "OK",
-  "yes": "Yes",
-  "no": "No",
-  "cancel": "Cancel",
-  "gps_not_available": "GPS is not available",
-  "gps_recommend": "GPS is recommended for best results.  Would you like to set GPS?",
-  "gps_internet_message": "If the Internet is turned on, the City Name can be referenced by GPS",
-  "language": "Locale",
-  "theme": "Theme",
-  "help_content": "Calculations:\n The calculations are based on equations from Astronomical Algorithms, by Jean Meeus. The sunrise and sunset results are theoretically accurate to within a minute for locations between +/- 72° of latitud. Please consider stopping well before the stated time. \n\nNOON:\nThe Noon screen displays the Solar Noon for the current day as selected by GPS or City in an easy to view manner. All times reflect the safety from settings.  (see below) \n\nDAWN:\nThe Dawn screen displays the selected Dawn formula from the settings and also various solar calculations. All times reflect the safety from settings.  \nPa-Auk = ( Sunrise - 40 Minutes).  \nNa-uyana = ( Sunrise - 30 minutes)  (see below) \n\nGPS:\nGPS will automatically set the city if the Internet is on and the checkbox is checked.  It is recommended that you use the GPS settings for your location because the Solar Noon will be most accurate this way.  This was not tested with \"Day Light Savings\" locations.\n\nSETTINGS:\nOffset:\n This is automatically set when using GPS.  If you use City Search in settings, you must select an offset (GMT +- your local time). \nSaftey:\nThis subtracts minutes from the Noon time to make it earlier and adds to Dawnrise to make it later.  The formula is accurate within one minute so the default safety is 1 minute. \nDawn:\nChoose your prefered Dawnrise.  Na-Uyana uses Sunrise -30 minutes, and Pa-Auk uses Sunrise -40 minutes.  Safety will add x-Minutes to this time. \nTimer:\nThe Timer screen allows for hands free audio notifications.  Speech means \"Text to Speech\".  The volume is controlled by the slider.  Under normal conditions the speech notifications only work while the screen is on.  To fix this, you can make the screen stay awake with the \"Screen Always On\" switch, or you can enable the \"TTS with screen off\" feature.  This will enable \"background\" operation while your screen is off and prevent the device from entering sleep mode. You should test this background feature a few times before relying on it.  Some phones may not allow it. We are not responsible for anything.  When you close the applicaton, a method is called to stop the background task.  You will know the app is running in the background by the sun icon displayed in the top of your phone's notification area (where the time and signal bars are).  If Buddhist Sun is not in \"background mode\", you will not see a sun icon. This feature is not available for iOS users.\n The speech announcements are in the following minute intervals: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacy:\nA full privacy statement is located at:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n We do not collect information.",
-  "about_content": "Buddhist Sun is a small app for Buddhist monks and nuns to display the Solar Noon time specific to Buddhist monastic needs. Because I usually eat with my hands, I needed to have a \"hands free\" way to know when the Noon was approaching. The timer with voice notifications turned on helps me know the time left for eating.  I enjoy using the app, and I hope that you do too.\n\nWhy is this important?\nThose who follow Buddhist monastic rules are not allowed to eat after Noon.  The rule is according to the sun at its zenith in the sky rather than a clock. They did not have clocks in the Buddha's time.  Others who follow 8 or 10 precepts may find this app useful too.\n\nI recommend https://TimeandDate.com to verify this app's accuracy.This application is meant for \"present moment/location\" use.  \n\nMay this help you to reach Nibbāna quickly and safely!",
-  "gps_permission_content": "Permission will be requested for GPS use. This allows for Buddhist Sun to know the GPS Location Data to calculate the sun's position. GPS is only collected once for each time the GPS button is pressed.  Data is not sent outside this app.",
-  "background_permission_content": "Permission will be requested for background use.  This permission is needed to enable speech notifications to run properly the screen on.  Buddhist Sun will turn off this Background process when the switch is turned off or the app is closed.  Permission will be requested only one time if accepted.",
-  "dstSavingsNotice": "Warning, this app does not calculate for Daylight Savings Time (DST).  Please be aware of the changes.  When DST happens you need to reset the GPS or the offset found in the Settings Tab.",
-  "dstNoticeTitle": "Daylight Savings Notice",
-  "verify": "Verify Noon",
-  "rateThisApp": "Rate This App",
-  "prev": "Prev",
-  "next": "Next",
-  "moonPhase": "Moon Phase:",
-  "selectDate": "Select Date",
-  "selectedDate": "Selected Date:",
-  "moon": "moon",
-  "darkMode": "Dark Mode",
-  "color": "Color",
-  "material3": "Material 3"
+  "settings": "การตั้งค่า",
+  "help": "ช่วยเหลือ",
+  "about": "เกี่ยวกับ",
+  "licenses": "ใบอนุญาต",
+  "not_set": "ไม่ได้ตั้งค่า",
+  "solar_noon": "เที่ยงวัน",
+  "gmt_offset": "ชดเชย GMT",
+  "hours": "ชั่วโมง",
+  "astronomical_twilight": "สนธยาดาราศาสตร์",
+  "nautical_twilight": "สนธยาทะเล",
+  "civil_twilight": "สนธยาพลเรือน",
+  "sunrise": "พระอาทิตย์ขึ้น",
+  "date": "วันที่",
+  "current_time": "เวลาปัจจุบัน",
+  "late": "ช้า",
+  "time_left": "เหลือเวลา",
+  "speech_notify": "แจ้งด้วยคำพูด",
+  "screen_always_on": "หน้าจอเปิดตลอดเวลา",
+  "speech_in_background": "คำพูดในพื้นหลัง",
+  "volume": "ระดับเสียง",
+  "press_wait": "กด_รอ.",
+  "get_gps": "รับจีพีเอส",
+  "save_gps": "บันทึกจีพีเอส",
+  "set_gps_city": "ตั้งค่า GPS ตามตัวเมือง ",
+  "previous_gps_is": "GPS ก่อนหน้าคือ",
+  "decimal_number": "เลขทศนิยม",
+  "current_offset_is": "สาขาปัจจุบันคือ",
+  "safety": "ความปลอดภัย",
+  "none": "ไม่มี",
+  "minute1": "1 นาที",
+  "minutes2": "2 นาที",
+  "minutes3": "3 นาที",
+  "minutes4": "4 นาที",
+  "minutes5": "5 นาที",
+  "minutes10": "10 นาที่",
+  "pa_auk": "พะอ๊อก",
+  "na_uyana": "นะ อุยะนะ",
+  "search_for_city": "ค้นหาเมือง",
+  "gps_permission": "การอนุญาตจีพีเอส",
+  "background_permission": "การอนุญาตพื้นหลัง",
+  "error": "ข้อผิดพลาด",
+  "notification": "การแจ้งเตือน",
+  "running_in_background": "เเสดงเวลาเเบบพุทธในพื้นหลัง",
+  "background_initialized": "เริ่มต้นพื้นหลังแล้ว",
+  "background_enabled": "เปิดใช้งานพื้นหลังแล้ว",
+  "background_not_set": "ไม่ได้ตั้งค่าพื้นหลัง",
+  "background_init_error": "ข้อผิดพลาดในการเริ่มต้นพื้นหลัง",
+  "background_disabled": "พื้นหลังไม่ทำงาน",
+  "ok": "ตกลง",
+  "yes": "ใช่",
+  "no": "ไม่",
+  "cancel": "ยกเลิก",
+  "gps_not_available": "จีพีเอสไม่พร้อมใช้งาน",
+  "gps_recommend": "แนะนำให้ใช้ GPS เพื่อผลลัพธ์ที่ดีที่สุด.  คุณต้องการตั้งค่า GPS หรือไม่?",
+  "gps_internet_message": "หากอินเทอร์เน็ตเปิดอยู่, ชื่อเมืองสามารถอ้างอิงได้โดย GPS",
+  "language": "ท้องถิ่น",
+  "theme": "ธีม",
+  "help_content": "การคำนวณ:\n การคำนวณอิงตามสมการจากอัลกอริทึมทางดาราศาสตร์, โดย Jean Meeus.เวลาพระอาทิตย์ขึ้นเเละพระอาทิตย์ตกมีความคลาดเคลื่อนไม่เกิน 1 นาที สำหรับพื้นที่ที่ตั้งอยู่ในระหว่างละติจูด +/- 72°.กรุณาหยุดฉันก่อนเวลาถูกเเจ้ง. \n\nเที่ยงวัน:\n เที่ยงวันจะเเสดงตามเเบบสุริยคติอย่างที่เลือกโดยGPSหรือเมือง เพื่อความสะดวกเเก่การดู.ทุกเวลาสะท้อนความปลอดภัยจากตั้งค่า.  (ดูตามด้านล่าง) \n\nDAWN:\n จอเเสดงอรุณเเสดงในรูปเเบบอรุณที่เลือกไว้จากการตั้งค่าเเละจากการคำนวณทางสุริยคติ.ทุกเวลาสะท้อนความปลอดภัยจากตั้งค่า.  \nพะอ๊อก = (พระอาทิตย์ขึ้น 40 นาที).  \nนา อุยานะ = (พระอาทิตย์ขึ้น 30 นาที) (see belowดูตามด้านล่าง) \n\nGPS:\n จะตั้งค่าเมืองโดยอัตโนมัติหากอินเทอร์เน็ตเปิดอยู่และทำเครื่องหมายในช่อง.ขอแนะนำให้คุณใช้การตั้งค่า GPS สำหรับตำแหน่งของคุณ เนื่องจากเวลาเที่ยงเเบบสุริยคติจะแม่นยำที่สุดด้วยวิธีนี้.สิ่งนี้ไม่ได้ทดสอบด้วย \"Day Light Savings\" locations สถานที่.\n\nการตั้งค่า:\nOffset:\nสิ่งนี้จะถูกตั้งค่าโดยอัตโนมัติเมื่อใช้ GPS.หากคุณใช้การค้นหาเมืองในการตั้งค่า,(GMT +- your local time)คุณต้องเลือกออฟเซ็ต (GMT +- เวลาท้องถิ่นของคุณ). \nความปลอดภัย:\nวิธีนี้จะลบนาทีจากเวลาเที่ยงเพื่อให้เร็วขึ้น และเพิ่มในการขึ้นของอรุณเพื่อทำในภายหลัง.สูตรมีความแม่นยำภายใน 1 นาที ดังนั้นความปลอดภัยเริ่มต้นคือ 1 นาที. \nอรุณ:\nเลือก การขึ้นของอรุณ ที่คุณต้องการ.  นา อุยานะใช้เวลาพระอาทิตย์ขึ้น -30 นาที,และพะอ๊อกใช้เวลาพระอาทิตย์ขึ้น -40 นาที.ความปลอดภัยจะเพิ่ม x-นานี ในเวลานี้. \nTimerตัวจับเวลา:\nหน้าจอตัวจับเวลาช่วยให้สามารถแจ้งเตือนด้วยเสียงแบบแฮนด์ฟรีได้.คำพูด หมายถึง  \"ข้อความเป็นคำพูด\". ระดับเสียงถูกควบคุมโดยแถบเลื่อน. ภายใต้สภาวะปกติ การแจ้งเตือนด้วยเสียงจะทำงานเฉพาะในขณะที่หน้าจอเปิดอยู่เท่านั้น.เพื่อแก้ไขปัญหานี้ คุณสามารถทำให้หน้าจอเปิดอยู่เสมอโดยใช้สวิตช์ \"หน้าจอเปิดตลอดเวลา\", หรือคุณสามารถเปิดใช้งานคุณลักษณะ \"TTS พร้อมปิดหน้าจอ\" ได้.การดำเนินการนี้จะเปิดใช้งานการทำงาน \"พื้นหลัง\" ในขณะที่หน้าจอของคุณปิดอยู่ และป้องกันไม่ให้อุปกรณ์เข้าสู่โหมดสลีป.คุณควรทดสอบคุณลักษณะพื้นหลังนี้สองสามครั้งก่อนที่จะใช้งาน.โทรศัพท์บางรุ่นอาจไม่รองรับเเอปนี้ เราไม่รับผิดชอบต่อสิ่งใดๆ.เมื่อคุณปิดแอปพลิเคชัน,เรียกว่าวิธีเพื่อหยุดงานเบื้องหลัง.  คุณจะรู้ว่าแอปกำลังทำงานในพื้นหลังโดยไอคอนรูปดวงอาทิตย์ที่แสดงที่ด้านบนของพื้นที่แจ้งเตือนในโทรศัพท์ของคุณ (ซึ่งมีเวลาและแถบสัญญาณ).,หากพุทธซันไม่อยู่ใน \"โหมดพื้นหลัง\" คุณจะไม่เห็นไอคอนรูปพระอาทิตย์ ฟีเจอร์นี้ไม่พร้อมใช้งานสำหรับผู้ใช้ iOS.\nการประกาศคำพูดอยู่ในช่วงนาทีต่อไปนี้: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacyความเป็นส่วนตัว:\nA full privacy statement is located at คำชี้แจงสิทธิส่วนบุคคลฉบับเต็มอยู่ที่:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n We do not collect information เราไม่รวบรวมข้อมูล.",
+  "เกี่ยวกับ_เนื้อหา": "พุทธซันเป็นแอพขนาดเล็กสำหรับพระภิกษุและแม่ชีเพื่อแสดงเวลาเที่ยงวันตามสุริยคติตามความต้องการของพระสงฆ์โดยเฉพาะ.เพราะปกติผมทานข้าวด้วยมือ,ผมจำเป็นต้องมีวิธี \"แฮนด์ฟรี\" เพื่อให้รู้ว่าใกล้เที่ยงวันไหน.ผมสนุกกับการใช้แอพนี้ และผมก็หวังว่าคุณจะชอบเช่นกัน.\n\nทำไมสิ่งนี้ถึงสำคัญ?\nผู้ที่ปฏิบัติตามกฎของสงฆ์จะไม่ได้รับอนุญาตให้รับประทานอาหารหลังเที่ยงวัน.กฎจะขึ้นอยู่กับดวงอาทิตย์ ณ จุดสุดยอดบนท้องฟ้ามากกว่านาฬิกา.พวกเขาไม่มีนาฬิกาในสมัยพุทธกาล.ผู้ที่ปฏิบัติตามศีล 8 หรือ 10 อาจพบว่าแอปนี้มีประโยชน์เช่นกัน.\n\nIแนะนำ https://TimeandDate.com เพื่อตรวจสอบความถูกต้องของแอปนี้.แอปพลิเคชันนี้มีไว้สำหรับการใช้งาน \"ปัจจุบันขณะ/สถานที่\".  \n\nขอให้สิ่งนี้ช่วยให้ถึงพระนิพพานได้อย่างรวดเร็วและปลอดภัย!",
+  "gps_permission_content": "จะมีการขออนุญาตสำหรับการใช้ GPS.ซึ่งช่วยให้พุทธซันทราบข้อมูลตำแหน่ง GPS เพื่อคำนวณตำแหน่งของดวงอาทิตย์ GPS จะถูกรวบรวมเพียงครั้งเดียวในแต่ละครั้งที่มีการกดปุ่ม GPS.  Data is not sent outside this app ข้อมูลจะไม่ถูกส่งไปนอกแอพนี้.",
+  "background_permission_content": "จะมีการขออนุญาตเพื่อใช้ในพื้นหลัง.การอนุญาตนี้จำเป็นสำหรับการเปิดใช้งานการแจ้งเตือนด้วยเสียงเพื่อให้ทำงานบนหน้าจอได้อย่างถูกต้อง.พุทธซันจะปิดกระบวนการพื้นหลังนี้เมื่อปิดสวิตช์หรือปิดแอป.  Permission will be requested only one time if accepted จะขออนุญาตเพียงครั้งเดียวหากได้รับการยอมรับ.",
+  "dstSavingsNotice": "คำเตือน แอปนี้ไม่ได้คำนวณเวลาออมแสง (DST).โปรดทราบถึงการเปลี่ยนแปลง.เกิดขึ้น คุณจะต้องรีเซ็ต GPS หรือออฟเซ็ตที่พบในแท็บการตั้งค่า.",
+  "dstNoticeTitle": "ประกาศเรื่องการปรับเวลาตามฤดูกาล",
+  "verify": "ยืนยันเที่ยง.",
+  "rateThisApp": "ให้คะแนนแอปนี้",
+  "prev": "ก่อนหน้า",
+  "next": "ต่อไป",
+  "moonPhase": "ข้างขึ้นข้างแรม:",
+  "selectDate": "เลือกวันที่",
+  "selectedDate": "วันที่เลือก:",
+  "moon": "พระจันทร์",
+  "darkMode": "โหมดมืด",
+  "color": "สี",
+  "material3": "วัสดุ 3"
 }
